--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,10 +10,19 @@
     = javascript_include_tag 'rails'
     = formtastic_stylesheet_link_tag
 
-    = javascript_include_tag 'fmenu'
-    = stylesheet_link_tag 'fmenu'
     = javascript_include_tag 'infogrid'
     = stylesheet_link_tag 'infogrid'
+
+    = javascript_include_tag 'fmenu'
+    = stylesheet_link_tag 'fmenu'
+
+    = javascript_include_tag 'slideshow'
+    = stylesheet_link_tag 'scroller'
+    = javascript_include_tag 'des'
+
+    = javascript_include_tag 'jcarousellite_1.0.1c4'
+    = javascript_include_tag 'news'
+    = stylesheet_link_tag 'news'
 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
