--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,6 +24,9 @@
     = javascript_include_tag 'news'
     = stylesheet_link_tag 'news'
 
+    = stylesheet_link_tag 'formtastic'
+    = stylesheet_link_tag 'formtastic_changes'
+
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if IE]
@@ -59,6 +62,7 @@
                   = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
                 .sub_menu
                   = link_to t('site.new_task'), new_task_url if user?
+                  %hr
                   = link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
                   = link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
                   = link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
@@ -73,9 +77,11 @@
                     = link_to t('site.my_account'), '/m/index'
                     = link_to t('trade.charge_payment'), '/m/charge'
                     = link_to t('trade.charge_point'), '/m/payment'
+                    %hr
                     = link_to t('site.my_task'), :controller=>'board', :action=>'task_show', :task_type => 'task'
                     = link_to t('site.my_todo'),:controller=>'board', :action=> 'task_show', :task_type => 'todo'
                     = link_to t('site.my_cash'),:controller=>'board', :action=> 'task_show', :task_type => 'cash'
+                    %hr
                     = link_to t('site.my_transport'),:controller=>'account', :action=> 'transport_list', :id => current_user
 
             - if manager? or admin?
@@ -85,13 +91,15 @@
                   = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
                 .sub_menu
                   = link_to t('site.user_manage'), users_path if admin?
+                  %hr
                   = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
                   = link_to t('site.big_cash'), '/t/big_cash'
                   = link_to t('trade.manage_payment'), '/m/approve/charge'
                   = link_to t('trade.manage_point'), '/m/approve/point'
+                  %hr
                   = link_to t('site.issue'), issues_path
+                  %hr
                   = link_to t('notice.new_notice'), new_notice_url if admin?
-                  = link_to t('site.transport_center'), transports_path
                   - if admin?
                     = link_to t('site.setting'), '/s/setting'
 
