--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -21,5 +21,7 @@
     = f.input :custom_judge
     = f.input :custom_judge_content, :as => :text
     %hr
-    =# f.buttons :commit
+    = label_tag t('account.operate_password')
+    = password_field_tag :operate_password
+    = t('account.operate_password_desc')
     = f.commit_button
