--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -11,6 +11,11 @@
         = f.input :role_objects, :collection => Role.where("name != 'super'")
     - if session[:user_edit_mode] == 'score'
       = f.input :score
+    - if session[:user_edit_mode] == 'code'
+      %li{:class=>'password optional'}
+        = label_tag t('site.old_password')
+        = password_field_tag 'old_password', '', :size => 50, :maxlength=>20
+      = f.input :operate_password, :input_html => { :maxlength=>20 }
 
     - if session[:user_edit_mode].nil?
       = f.input :im
