modify gain score function and some update

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -104,6 +104,7 @@
                   = link_to t('notice.new_notice'), new_notice_url if admin?
                   - if admin?
                     = link_to t('site.setting'), '/s/setting'
+                    = link_to t('system.message'), '/s/message'
 
             - if user? or guest?
               %li
