--- a/app/views/participants/index.html.haml
+++ b/app/views/participants/index.html.haml
@@ -1,4 +1,5 @@
 #roundshape
   = link_to t('global.create'), new_participant_path
 
-= render 'parts'
+= render 'parts', :collection => @participants
+= render 'parts', :collection => @shops
