--- a/app/views/participants/_form.html.haml
+++ b/app/views/participants/_form.html.haml
@@ -1,5 +1,6 @@
 - semantic_form_for @participant do |f| 
   - f.inputs do
+    = f.input :role_type, :collection => { t('participant.shop') => 'shop', t('participant.customer') => 'customer' }
     = f.input :part_type, :collection => { t('participant.taobao') => 'taobao', t('participant.paipai') => 'paipai', t('participant.youa') => 'youa'}
     = f.input :name
     = f.input :part_id
