--- a/app/views/participants/index.html.haml
+++ b/app/views/participants/index.html.haml
@@ -1,5 +1,4 @@
 #roundshape
   = link_to t('global.create'), new_participant_path
 
-= render 'parts', :collection => @participants
-= render 'parts', :collection => @shops
+= render 'parts'
