--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1001,6 +1001,22 @@ body #error {
 body .error {
   background-color: red;
 }
+/* line 111, ../../../app/stylesheets/screen.scss */
+body #equal-left {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width: 49.466%;
+  margin-right: 1.042%;
+}
+/* line 114, ../../../app/stylesheets/screen.scss */
+body #equal-right {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width: 49.466%;
+  margin-right: 0;
+}
 
 /* line 18, ../../../../../../../../usr/lib/ruby/gems/1.9.1/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_form.scss */
 form label {
