--- a/app/views/participants/edit.html.haml
+++ b/app/views/participants/edit.html.haml
@@ -1,6 +1,6 @@
 #roundshape
   = link_to t('global.show'), @participant
   |
-  \#{link_to t('global.back'), participants_path}
+  \#{link_to t('global.back'), :back}
 
 = render 'form'
