fix task condition judgement bugs

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -162,11 +162,11 @@ padding: 4px 0 4px 10px; /*header text is indented 10px*/
 }
 .info
 {
-  background-image:url('info.gif');
+  //background-image:url('info.gif');
 }
 .error
 {
-  background-image:url('error.gif');
+  //background-image:url('error.gif');
   color: #990000;
 }
 
